CHANGELOG

[Master]
- Add name, letter, octave, pitchClass
- Add choma function
- Add fromFreq, toFreq and cents
- Add fromMidi and toMidi